--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -328,5 +328,16 @@ input[type=submit] {
   margin-bottom: 20px;
 }
 
+.musicButton {
+  border: 2px solid #3b8fb5;
+  border-radius: 20px;
+  width: 300px;
+  margin: auto;
+  text-align: center;
+  color: #3b8fb5;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
 
 
