--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -337,7 +337,15 @@ input[type=submit] {
   color: #3b8fb5;
   padding-top: 5px;
   padding-bottom: 5px;
+  background-color: white;
+  transition: background-color 0.4s ease;
+  transition: color 0.4s ease;
 }
 
+.musicButton:hover {
+  background-color: #3b8fb5;
+  color: white;
+  cursor: pointer;
+}
 
 
