--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -298,7 +298,7 @@ label{
   margin: 10px 5px;
 }
 
-input[id=username], input[id=password] {
+input[id=username], input[id=password], input[id=phonenumber] {
   display: inline-block;
   float: left;
   padding: 5px;
@@ -306,7 +306,7 @@ input[id=username], input[id=password] {
   width: 65%;
 }
 
-input[id=username]:focus, input[id=password]:focus {
+input[id=username]:focus, input[id=password]:focus, input[id=phonenumber]:focus {
     border: 2px solid #3b8fb5;
 }
 
