--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -352,3 +352,35 @@ input[type=submit] {
   text-align: center;
 }
 
+.player {
+  padding-top: 10px;
+  display: inline-block;
+  position: relative;
+  margin-left: 20px;
+  padding-bottom: 3px;
+}
+
+.devices {
+  display: inline-block;
+  position: relative;
+  top: -25px;
+  margin-left: 20px;
+  text-align: center;
+}
+
+.devices * {
+  font-family: sans-serif;
+  text-align: center;
+}
+
+.currentDevice {
+  margin-bottom: 10px;
+}
+
+.musicPlayer {
+  border: 2px solid #3b8fb5;
+  border-radius: 20px;
+  background-color: white;
+  margin-left: 40px;
+  margin-right: 40px;
+}
