--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -378,6 +378,8 @@ input[type=submit] {
 }
 
 .musicPlayer {
+  position: relative;
+  top: 40px;
   border: 2px solid #3b8fb5;
   border-radius: 20px;
   background-color: white;
