Remove a tag in pizza image

--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -176,9 +176,10 @@ body {
   margin-top: 10px;
 }
 
-.pizzafavor {
+.pizzaFavor {
   width: 40px;
   height: auto;
+  cursor: pointer;
 }
 
 .countdownCircle {
