--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -180,8 +180,8 @@ body {
 .exerciseDescription {
   background-color: rgba(211, 211, 211, .6);
   border-radius: 15px;
-  padding: 45px 20px;
-  margin-bottom: 20px;
+  padding: 45px 20px 20px 45px;
+
   margin-top: 10px;
 }
 
@@ -346,7 +346,7 @@ input[type=submit] {
 .musicButton {
   border: 2px solid #3b8fb5;
   border-radius: 20px;
-  width: 300px;
+  width: 23em;
   margin: auto;
   text-align: center;
   color: #3b8fb5;
@@ -357,10 +357,25 @@ input[type=submit] {
   transition: color 0.4s ease;
 }
 
-.musicButton:hover {
+.musicButton:hover, .exerciseAudioBtn:hover {
   background-color: #3b8fb5;
   color: white;
   cursor: pointer;
+}
+
+.exerciseAudioBtn {
+  border: 2px solid #3b8fb5;
+  border-radius: 20px;
+  width: 12em;
+  margin: auto;
+  text-align: center;
+  color: #3b8fb5;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  background-color: white;
+  transition: background-color 0.4s ease;
+  transition: color 0.4s ease;
+  margin-top: 20px;
 }
 
 .deviceWarning {
