--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -2,6 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  color: #323435;
   background-image: url(../images/bg.png);
 }
 
@@ -59,14 +60,14 @@ body {
 
 .historyHeader, .favoritesHeader {
   display: inline-block;
+  cursor: pointer;
 }
 
 .favoritesHeader {
   float: right;
-  cursor: pointer;
 }
 
-.favoritesHeader:hover {
+.historyHeader:hover, .favoritesHeader:hover {
   color: #3b8fb5;
 }
 
