Add Banner component

--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -11,6 +11,13 @@ body {
   margin: auto;
 }
 
+.banner {
+  position: fixed;
+  top: 0;
+  right: 0;
+  border: 0;
+}
+
 .username {
   display: inline-block;
   float: right;
